Fix input appearance on iOS mobile devices

--- a/main.css
+++ b/main.css
@@ -64,6 +64,7 @@ table td {
     border-right: none;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
+    -webkit-appearance: none;
 }
 #searchBtn {
     flex-basis: 56px;
